fix scrollbar style

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap");
 
+/* 定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸 */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #ffffff00;
+}
+/* 定义滑块内阴影+圆角 */
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+  /* border-radius: 3px; */
+}
+
 :root {
   display: flex;
   align-items: center;
